# rust-cli-template

./: .devcontainer.json  .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  build.rs
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cargo-outdated.yml  clippy-annotations.yml  rust-ci.yml  rust.yml
src/: cli.rs  errors.rs  logging_error.rs  main.rs
src/errors/: logging_error.rs  mod.rs
