[package]
# Metadata that is also used to generate the --help command:
name = "application"
version = "0.0.0"
authors = ["Daniel Schemmel"]
description = "A sample application"

# Other metadata
edition = "2018"
publish = false

[profile.release]
lto = "fat"  # options: true/"fat", "thin", false (leaves on *local* LTO), "off"
codegen-units = 1  # more codegen units means fewer LTO optimization opportunities

[features]
default = []
bug = []
subcommands = []

[dependencies]
anyhow = "1"
atty = "0.2"
build-info = { version = "0.0.17", default_features = false }
ctrlc = "3"
flexi_logger = "0.15"
log = "0.4"
structopt = "0.3"
thiserror = "1"

[dev-dependencies]
pretty_assertions = "0.6"

[build-dependencies]
build-info-build = "0.0.17"
